syntax = "proto3";

                 package employeeDailyStat;
service EmployeeDailyStatService {
 rpc createEmployeeDailyStat (EmployeeDailyStatCreateInput) returns (EmployeeDailyStat) {}
rpc employeeDailyStats (findManyParams) returns (stream EmployeeDailyStat) {}
rpc employeeDailyStat (EmployeeDailyStatWhereUniqueInput) returns (EmployeeDailyStat) {}
rpc updateEmployeeDailyStat (EmployeeDailyStatUpdateInput) returns (EmployeeDailyStat) {}
rpc deleteEmployeeDailyStat (EmployeeDailyStatWhereUniqueInput) returns (EmployeeDailyStat) {} 
 }
message EmployeeDailyStatCreateInput {
int32 averageOrderAmount = 1;
int32 averageServiceTime = 2;
int32 avgServiceTimeChangePercent = 3;
string avgServiceTimeTrend = 4;
string bestServiceTime = 5;
int32 canceledOrders = 6;
int32 cardRevenue = 7;
int32 cashRevenue = 8;
int32 clientsChangePercent = 9;
string clientsTrend = 10;
int32 completedOrders = 11;
string createdAt = 12;
int32 dailyRating = 13;
string date = 14;
int32 efficiencyChangePercent = 15;
int32 efficiencyRate = 16;
string efficiencyTrend = 17;
string firstOrderTime = 18;
string id = 19;
string lastOrderTime = 20;
int32 monthToDateOrders = 21;
int32 monthToDateRevenue = 22;
int32 newClients = 23;
int32 offPeakOrders = 24;
int32 ordersChangePercent = 25;
int32 ordersCount = 26;
string ordersTrend = 27;
int32 overtimeHours = 28;
int32 peakHoursOrders = 29;
int32 performanceScore = 30;
int32 prevMonthOrders = 31;
int32 prevMonthRevenue = 32;
int32 ratingChangePercent = 33;
string ratingTrend = 34;
int32 ratingsCount = 35;
int32 repeatClients = 36;
int32 revenue = 37;
int32 revenueChangePercent = 38;
string revenueTrend = 39;
int32 scheduledHours = 40;
int32 servicesCount = 41;
int32 totalBreaksTime = 42;
int32 totalClients = 43;
int32 totalIdleTime = 44;
int32 totalWorkedHours = 45;
string updatedAt = 46;
int32 workTime = 47;
string worstServiceTime = 48;
};
message EmployeeDailyStat {
int32 averageOrderAmount = 1;
int32 averageServiceTime = 2;
int32 avgServiceTimeChangePercent = 3;
string avgServiceTimeTrend = 4;
string bestServiceTime = 5;
int32 canceledOrders = 6;
int32 cardRevenue = 7;
int32 cashRevenue = 8;
int32 clientsChangePercent = 9;
string clientsTrend = 10;
int32 completedOrders = 11;
string createdAt = 12;
int32 dailyRating = 13;
string date = 14;
int32 efficiencyChangePercent = 15;
int32 efficiencyRate = 16;
string efficiencyTrend = 17;
string firstOrderTime = 18;
string id = 19;
string lastOrderTime = 20;
int32 monthToDateOrders = 21;
int32 monthToDateRevenue = 22;
int32 newClients = 23;
int32 offPeakOrders = 24;
int32 ordersChangePercent = 25;
int32 ordersCount = 26;
string ordersTrend = 27;
int32 overtimeHours = 28;
int32 peakHoursOrders = 29;
int32 performanceScore = 30;
int32 prevMonthOrders = 31;
int32 prevMonthRevenue = 32;
int32 ratingChangePercent = 33;
string ratingTrend = 34;
int32 ratingsCount = 35;
int32 repeatClients = 36;
int32 revenue = 37;
int32 revenueChangePercent = 38;
string revenueTrend = 39;
int32 scheduledHours = 40;
int32 servicesCount = 41;
int32 totalBreaksTime = 42;
int32 totalClients = 43;
int32 totalIdleTime = 44;
int32 totalWorkedHours = 45;
string updatedAt = 46;
int32 workTime = 47;
string worstServiceTime = 48;
};
message EmployeeDailyStatWhereUniqueInput {
int32 averageOrderAmount = 1;
int32 averageServiceTime = 2;
int32 avgServiceTimeChangePercent = 3;
string avgServiceTimeTrend = 4;
string bestServiceTime = 5;
int32 canceledOrders = 6;
int32 cardRevenue = 7;
int32 cashRevenue = 8;
int32 clientsChangePercent = 9;
string clientsTrend = 10;
int32 completedOrders = 11;
string createdAt = 12;
int32 dailyRating = 13;
string date = 14;
int32 efficiencyChangePercent = 15;
int32 efficiencyRate = 16;
string efficiencyTrend = 17;
string firstOrderTime = 18;
string id = 19;
string lastOrderTime = 20;
int32 monthToDateOrders = 21;
int32 monthToDateRevenue = 22;
int32 newClients = 23;
int32 offPeakOrders = 24;
int32 ordersChangePercent = 25;
int32 ordersCount = 26;
string ordersTrend = 27;
int32 overtimeHours = 28;
int32 peakHoursOrders = 29;
int32 performanceScore = 30;
int32 prevMonthOrders = 31;
int32 prevMonthRevenue = 32;
int32 ratingChangePercent = 33;
string ratingTrend = 34;
int32 ratingsCount = 35;
int32 repeatClients = 36;
int32 revenue = 37;
int32 revenueChangePercent = 38;
string revenueTrend = 39;
int32 scheduledHours = 40;
int32 servicesCount = 41;
int32 totalBreaksTime = 42;
int32 totalClients = 43;
int32 totalIdleTime = 44;
int32 totalWorkedHours = 45;
string updatedAt = 46;
int32 workTime = 47;
string worstServiceTime = 48;
};
message EmployeeDailyStatUpdateInput {
int32 averageOrderAmount = 1;
int32 averageServiceTime = 2;
int32 avgServiceTimeChangePercent = 3;
string avgServiceTimeTrend = 4;
string bestServiceTime = 5;
int32 canceledOrders = 6;
int32 cardRevenue = 7;
int32 cashRevenue = 8;
int32 clientsChangePercent = 9;
string clientsTrend = 10;
int32 completedOrders = 11;
string createdAt = 12;
int32 dailyRating = 13;
string date = 14;
int32 efficiencyChangePercent = 15;
int32 efficiencyRate = 16;
string efficiencyTrend = 17;
string firstOrderTime = 18;
string id = 19;
string lastOrderTime = 20;
int32 monthToDateOrders = 21;
int32 monthToDateRevenue = 22;
int32 newClients = 23;
int32 offPeakOrders = 24;
int32 ordersChangePercent = 25;
int32 ordersCount = 26;
string ordersTrend = 27;
int32 overtimeHours = 28;
int32 peakHoursOrders = 29;
int32 performanceScore = 30;
int32 prevMonthOrders = 31;
int32 prevMonthRevenue = 32;
int32 ratingChangePercent = 33;
string ratingTrend = 34;
int32 ratingsCount = 35;
int32 repeatClients = 36;
int32 revenue = 37;
int32 revenueChangePercent = 38;
string revenueTrend = 39;
int32 scheduledHours = 40;
int32 servicesCount = 41;
int32 totalBreaksTime = 42;
int32 totalClients = 43;
int32 totalIdleTime = 44;
int32 totalWorkedHours = 45;
string updatedAt = 46;
int32 workTime = 47;
string worstServiceTime = 48;
};
message findManyParams {

};